workflow/engine/skinEngine/base/css/style.css
/* ... */
.calendar tfoot .ttip { /* Tooltip (status bar) cell <TD> */
  background: #000;
  color: #fff;
  border-top: 1px solid #206A9B;
  padding: 1px;
}

.calendar tfoot .hilite { /* Hover style for buttons in footer */
  background: #B8DAF0;
  border: 1px solid #178AEB;
  color: #000;
  padding: 1px;
}

.calendar tfoot .active { /* Active (pressed) style for buttons in footer */
  background: #006AA9;
  padding: 2px 0px 0px 2px;
}

/* Combo boxes (menus that display months/years for direct selection) */

.calendar .combo {
  position: absolute;
  display: none;
  top: 0px;
  left: 0px;
  width: 4em;
  cursor: default;
  border: 1px solid #655;
  background: #def;
  color: #000;
  font-size: 90%;
  z-index: 100;
}

.calendar .combo .label,
.calendar .combo .label-IEfix {
  text-align: center;
  padding: 1px;
}

.calendar .combo .label-IEfix {
  width: 4em;
}

.calendar .combo .hilite {
  background: #34ABFA;
  border-top: 1px solid #46a;
  border-bottom: 1px solid #46a;
  font-weight: bold;
}

.calendar .combo .active {
  border-top: 1px solid #46a;
  border-bottom: 1px solid #46a;
  background: #F1F8FC;
  font-weight: bold;
}

.calendar td.time {
  border-top: 1px solid #000;
  padding: 1px 0px;
  text-align: center;
  background-color: #E9F2E9;
}

.calendar td.time .hour,
.calendar td.time .minute,
.calendar td.time .ampm {
  padding: 0px 3px 0px 4px;
  border: 1px solid #889;
  font-weight: bold;
  background-color: #E9F2E9;
}

.calendar td.time .ampm {
  text-align: center;
}

.calendar td.time .colon {
  padding: 0px 2px 0px 3px;
  font-weight: bold;
}

.calendar td.time span.hilite { /*e*/
  border-color: #000;
  background-color: #6F7F75;
  color: #fff;
}

.calendar td.time span.active {
  border-color: red;
  background-color: #000;
  color: #A5FF00;
}

/**************************** End -> JSCalendar Widget by Erik Amaru Ortiz <erik@colosa.com> *********************************/

/**************************** Start -> Suggest Widget by Erik Amaru Ortiz <erik@colosa.com>  *********************************/
/*
================================================
autosuggest, inquisitor style
================================================
*/

input.module_app_suggest{
  color:#333333;
  font:8pt sans-serif;
  padding:1px 1px 1px 3px;
}



div.autosuggest
{
	position: absolute;
	background-position: top;
	background-repeat: no-repeat;
	padding: 8px 2px 0 3px;
	z-index:1000;
}


div.autosuggest div.as_header,
div.autosuggest div.as_footer
{
	position: relative;
	height: 0px;
	padding: 0 6px;
	
	background-position: top right;
	background-repeat: no-repeat;
	overflow: hidden;
}
div.autosuggest div.as_footer
{
	
}

div.autosuggest div.as_header div.as_corner,
div.autosuggest div.as_footer div.as_corner
{
	position: absolute;
	top: 0;
	left: 0;
	height: 6px;
	width: 6px;
	
	background-position: top left;
	background-repeat: no-repeat;
}
div.autosuggest div.as_footer div.as_corner
{
	
}
div.autosuggest div.as_header div.as_bar,
div.autosuggest div.as_footer div.as_bar
{
	height: 6px;
	overflow: hidden;
	background-color: #333;
}


div.autosuggest ul
{
	list-style: none;
	margin: 0 0 -4px 0;
	padding: 0;
	overflow: hidden;
	background-color: #fff;
  border: 1px #C3C3C3 solid;
  color: #000;
}

div.autosuggest ul li
{
	color: #ccc;
	padding: 0;
	margin: 0 4px 4px;
	text-align: left;
}

div.autosuggest ul li a
{
	color: #000;
	display: block;
	text-decoration: none;
	background-color: transparent;
	/*text-shadow: #000 0px 0px 5px;*/
	position: relative;
	padding: 0;
	width: 100%;
}
div.autosuggest ul li a:hover
{
	background-color: #444;
}
div.autosuggest ul li.as_highlight a:hover
{
	background-color: #D1DEDF;  /*erik -- back sel color*/
}

div.autosuggest ul li a span
{
	display: block;
	padding: 1px 0px;
	font-weight: normal;
}

div.autosuggest ul li a span small
{
	font-weight: normal;
	color: #999;
}

div.autosuggest ul li.as_highlight a span small
{
	color: red;
}

div.autosuggest ul li.as_highlight a
{
	color: #000;
	background-color: #D1DEDF;   /* erik -- hover*/
	
	background-position: bottom right;
	background-repeat: no-repeat;
}

div.autosuggest ul li.as_highlight a span
{
	
	background-position: bottom left;
	background-repeat: no-repeat;
}

div.autosuggest ul li a .tl,
div.autosuggest ul li a .tr
{
	background-image: transparent;
	background-repeat: no-repeat;
	width: 6px;
	height: 6px;
	position: absolute;
	top: 0;
	padding: 0;
	margin: 0;
}
div.autosuggest ul li a .tr
{
	right: 0;
}

div.autosuggest ul li.as_highlight a .tl
{
	left: 0;
	background-position: bottom left;
}

div.autosuggest ul li.as_highlight a .tr
{
	right: 0;
	
	background-position: bottom right;
}



div.autosuggest ul li.as_warning
{
	font-weight: normal;
	text-align: center;
  color: #A0A0A0;
}

div.autosuggest ul em
{
	font-style: normal;
	color: #000;
  font-weight: bold;
}

.textBlue{
	font:normal 8pt Tahoma,sans-serif,MiscFixed;
	color:#006699;
	text-decoration:none;
}

.textBlack{
	font:normal 8pt Tahoma,sans-serif,MiscFixed;
	color:#808080;
	text-decoration:none;
}

/**************************** End -> Suggest Widget by Erik Amaru Ortiz <erik@colosa.com>  *********************************/

.tableGrid_view
{
	width: 100%;
	border-top: 0px solid #DADADA;
	border-bottom: 0px solid #DADADA;
	border-left: 0px solid #DADADA;
	border-right: 0px solid #DADADA;
	padding: 0px;

}

table.tableGrid_view td
{
	border-top: 1px solid #DADADA;
	border-bottom: 1px solid #DADADA;
	border-left: 0px solid #DADADA;
	border-right: 0px solid #DADADA;
	padding: 0px;

}

.ui-widget-header {
	-moz-background-clip:border;
	-moz-background-inline-policy:continuous;
	-moz-background-origin:padding;
	background:#5C9CCC url(/images/ui-bg_gloss-wave_55_5c9ccc_500x100.png) repeat-x scroll 50% 50%;
	border:1px solid #4297D7;
	color:#FFFFFF;
	font-weight:bold;
	font-size: 11px;
}
/* ... */

